--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.yang.study</groupId>
-    <artifactId>spring-boot-demo</artifactId>
+    <artifactId>springbootdemo</artifactId>
     <version>1.0-SNAPSHOT</version>
     <!-- 定义公共资源版本 -->
     <parent>
@@ -109,11 +109,6 @@
             <groupId>org.quartz-scheduler</groupId>
             <artifactId>quartz-jobs</artifactId>
             <version>2.2.1</version>
-        </dependency>
-        <dependency>
-            <groupId>com.yang.study</groupId>
-            <artifactId>spring-boot-demo</artifactId>
-            <version>1.0-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
